--- a/class_materials/class_09/chapter_4c.tex
+++ b/class_materials/class_09/chapter_4c.tex
@@ -27,7 +27,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \title{\bf Math 1010 \\ Chapter 4C\iftoggle{sol}{ Key}{} }
-\date{\today}
+\date{Feb 14, 2018}
 \maketitle
 
 
