--- a/class_materials/class_05/chapter_3b.tex
+++ b/class_materials/class_05/chapter_3b.tex
@@ -17,7 +17,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \title{\bf Math 1010\\Chapter 3B}
-\date{\vspace{-0.5in}\today}
+\date{\vspace{-0.5in}Jan 31 2018}
 \maketitle
 
 
